2005-06-21  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkdnd.c (gtk_drag_source_set): Connect to 
	button-release-event as well, to handle touchscreen 
	scenarios better.  (#171490, Markku Vire)

2005-06-20  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkiconcache.c: Handle missing MAP_FAILED.  (#308449, Georg
	Schwarz) 

2005-06-17  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkdnd-win32.c (gdk_dropfiles_filter): Set the actions
	and suggested_action fields in the GdkDragContext to
	GDK_ACTION_COPY. Otherwise apps that check the suggested_action
	field, like eog, won't accept dropped files.

2005-06-17  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentrycompletion.c (gtk_entry_completion_complete): 
	Resize the popup if necessary.  (#308076, Vincent Noel)

	* gtk/gtkwindow.c (gtk_window_real_set_focus): Queue a
	draw on the old and new focus widgets, if their defaultness
	changes.  (#305607, Billy Biggs)

2005-06-16  Tor Lillqvist  <tml@novell.com>

	* gtk/gtkmain.c (g_win32_locale_filename_from_utf8): [Win32]
	Borrow this function from GLib HEAD.
	(_gtk_get_localedir): [Win32] Make sure the run-time locale
	directory is in system codepage, as it is passed to the
	non-UTF8-aware gettext library.

2005-06-15  Matthias Clasen  <mclasen@redhat.com>
	
	* configure.in: Bump version

	* === Released 2.6.8 ===

2005-06-15  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: More updates, move bug numbers to my
	separate list of bugs, which will get merged into
	the announcement. For 2.8.0, I will try a somewhat
	different style for the NEWS, and list bugs and
	contributors separately from features.

2005-06-14  Federico Mena Quintero  <federico@ximian.com>

	* NEWS: Fill in with GtkFileChooser bugs.

2005-06-14  Federico Mena Quintero  <federico@ximian.com>

	Fix #302087:

	* gtk/gtkfilechooserdefault.c (list_selection_changed): Emit
	"selection-changed" and do the normal housekeeping even if we are